footer and submit button alignment issue fixed

--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -4,4 +4,5 @@
     color: white;
     display:grid;
     align-items: center;
+    margin-top:18px;
 }
